# ragstack

./: .env.example  .gitignore  Makefile  README.md  SPEC.md  docker-compose.yml  scratchpad.md
conformance/: conftest.py  pyproject.toml  test_documents.py  test_graph.py  test_health.py  test_ingest.py  test_query.py  test_retrieve.py  test_schema_validation.py
conformance/helpers/: response_comparator.py  schema_validator.py
contracts/: openapi.yaml
contracts/fixtures/documents/: sample_small.txt
contracts/fixtures/queries/: test_queries.json
contracts/schemas/: document_info.json  entity_info.json  health_response.json  ingest_request.json  ingest_response.json  query_request.json  query_response.json  retrieve_request.json  retrieve_response.json  source.json  triple_response.json
deploy/: docker-compose.infra.yml  docker-compose.python.yml  docker-compose.sidecars.yml  docker-compose.yml
docker/: Dockerfile
docs/: ragstack-overview.md  ragstack-overview.pptx
go/: .golangci.yml  go.mod
go/cmd/api/: main.go
go/docker/: Dockerfile
go/internal/api/: handler_document.go  handler_graph.go  handler_health.go  handler_query.go  request.go  response.go  router.go  router_test.go  write.go
go/internal/config/: config.go
python/: pyproject.toml
python/ragstack/: models.py  protocols.py
python/ragstack/api/: main.py
python/ragstack/api/routers/: documents.py  health.py  query.py
python/ragstack/ingestion/: chunkers.py  loaders.py  pipeline.py
python/ragstack/rewriting/: rewriters.py
python/ragstack/scoring/: scorers.py
python/ragstack/stores/: memory.py
python/tests/api/: test_endpoints.py
python/tests/unit/: test_chunkers.py  test_rewriters.py  test_scorers.py
ragstack/: config.py
ragstack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ragstack/retrieval/: retriever.py
sidecars/crossencoder/: Dockerfile  main.py
sidecars/embedding/: Dockerfile  main.py  requirements.txt
sidecars/faiss/: Dockerfile  main.py  requirements.txt
tests/unit/: test_stores.py
(+3 files in other folders)
