[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ragstack-conformance"
version = "0.1.0"
description = "Conformance tests for RAGStack API implementations"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "jsonschema>=4.22",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
