[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragstack"
version = "0.1.0"
description = "Production-grade full-stack RAG system"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
vector = [
    "qdrant-client>=1.9",
]
text = [
    "elasticsearch>=8.13",
]
graph = [
    "neo4j>=5.20",
    "networkx>=3.3",
    "spacy>=3.7",
]
embeddings = [
    "openai>=1.30",
    "sentence-transformers>=3.0",
]
queue = [
    "celery[redis]>=5.4",
    "redis>=5.0",
]
observability = [
    "structlog>=24.2",
    "prometheus-fastapi-instrumentator>=7.0",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]
all = [
    "ragstack[vector,text,graph,embeddings,queue,observability]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ragstack*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
